--- a/package.json
+++ b/package.json
@@ -38,10 +38,10 @@
     "zone.js": "^0.6.17"
   },
   "devDependencies": {
-    "@angular/cli": "^1.2.6",
     "concurrently": "^2.2.0",
     "electron": "~1.6.2",
     "typescript": "^2.0.2",
+    "lite-server": "^2.2.2",
     "typings": "^1.3.2"
   }
 }
